# tiny-vxl

./: CMakeLists.txt  LICENSE  README.md  known_problem.txt
test/: CMakeLists.txt
test/vgl/: CMakeLists.txt  test_affine_coordinates.cpp  test_line_segment_3d.cpp  test_oriented_box_2d.cpp  test_plane_3d.cpp  test_polygon.cpp  test_quadric.cpp
test/vgl/algo/: CMakeLists.txt  test_h_matrix_2d.cpp  test_h_matrix_3d.cpp  test_rotation_3d.cpp
test/vnl/: CMakeLists.txt  test_crs_index.cpp  test_diag_matrix.cpp  test_inverse.cpp  test_matrix.cpp  test_matrix_fixed.cpp  test_quaternion.cpp  test_rational.cpp  test_sparse_lst_sqr_function.cpp  test_vector.cpp  test_vector_fixed.cpp  test_vector_fixed_ref.cpp
test/vnl/algo/: CMakeLists.txt  test_levenberg_marquardt.cpp  test_qr.cpp  test_svd.cpp
test/vpgl/: CMakeLists.txt  test_affine_camera.cpp  test_calibration_matrix.cpp  test_generic_camera.cpp  test_perspective_camera.cpp  test_proj_camera.cpp
visual_studio/: README.md
vxl/: CMakeLists.txt  vgl.h  vnl.h  vpgl.h
vxl/vbl/: vbl_array_2d.h
vxl/vgl/: CMakeLists.txt  vgl_1d_basis.h  vgl_affine_coordinates.h  vgl_area.h  vgl_bounding_box.h  vgl_box_2d.h  vgl_box_3d.h  vgl_clip.h  vgl_closest_point.h  vgl_conic.h  vgl_conic_segment_2d.h  vgl_convex.h  vgl_cubic_spline_2d.h  vgl_cubic_spline_3d.h  vgl_cylinder.h  vgl_distance.h  vgl_frustum_3d.h  vgl_homg.h  vgl_homg_line_2d.h  vgl_homg_line_3d_2_points.h  vgl_homg_plane_3d.h  vgl_homg_point_1d.h  vgl_homg_point_2d.h  vgl_homg_point_3d.h  vgl_infinite_line_3d.h  vgl_intersection.h  vgl_line_2d.h  vgl_line_3d_2_points.h  vgl_line_segment_2d.h  vgl_line_segment_3d.h  vgl_lineseg_test.h  vgl_oriented_box_2d.h  vgl_plane_3d.h  vgl_point_2d.h  vgl_point_3d.h  vgl_polygon.h  vgl_polygon_test.h  vgl_quadric_3d.h  vgl_ray_3d.h  vgl_sphere_3d.h  (+4 more)
vxl/vgl/algo/: vgl_h_matrix_2d.h  vgl_h_matrix_2d_compute.h  vgl_h_matrix_2d_compute_4point.h  vgl_h_matrix_2d_compute_linear.h  vgl_h_matrix_2d_compute_rigid_body.h  vgl_h_matrix_2d_optimize.h  vgl_h_matrix_2d_optimize_lmq.h  vgl_h_matrix_3d.h  vgl_h_matrix_3d_compute.h  vgl_h_matrix_3d_compute_affine.h  vgl_h_matrix_3d_compute_linear.h  vgl_norm_trans_2d.h  vgl_norm_trans_3d.h  vgl_rotation_3d.h
vxl/vgl/tests/: test_clip.cpp  test_infinite_line_3d.cpp  test_ray_3d.cpp  test_sphere_3d.cpp
vxl/vnl/: vnl_cross.h  vnl_crs_index.h  vnl_det.h  vnl_diag_matrix.h  vnl_error.h  vnl_export.h  vnl_fastops.h  vnl_inverse.h  vnl_least_squares_function.h  vnl_math.h  vnl_matrix.h  vnl_matrix_fixed.h  vnl_nonlinear_minimizer.h  vnl_numeric_traits.h  vnl_quaternion.h  vnl_random.h  vnl_rational.h  vnl_sparse_lst_sqr_function.h  vnl_trace.h  vnl_transpose.h  vnl_vector.h  vnl_vector_fixed.h  vnl_vector_fixed_ref.h  vnl_vector_ref.h
vxl/vnl/algo/: vnl_algo_export.h  vnl_levenberg_marquardt.h  vnl_qr.h  vnl_svd.h
vxl/vpgl/: vpgl_affine_camera.h  vpgl_calibration_matrix.h  vpgl_camera.h  vpgl_generic_camera.h  vpgl_perspective_camera.h  vpgl_proj_camera.h
vxl/vpgl/algo/: vpgl_calibration_matrix_compute.h
xcode/test/: test_main.cpp
xcode/test/vgl/: CMakeLists.txt  test_area.cpp  test_closest_point.cpp  test_convex.cpp  test_frustum_3d.cpp  test_line_3d_2_points.cpp  test_oriented_box_2d.cpp
xcode/test/vnl/: test_diag_matrix.cpp  test_matrix.cpp  test_matrix_fixed.cpp
xcode/test/vpgl/: test_proj_camera.cpp
xcode/vxl.xcodeproj/: project.pbxproj
xcode/vxl.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/vxl.xcodeproj/project.xcworkspace/xcuserdata/jimmy.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/vxl.xcodeproj/xcuserdata/jimmy.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
xcode/vxl.xcodeproj/xcuserdata/jimmy.xcuserdatad/xcschemes/: xcschememanagement.plist
